Change overflow property in order to fix horizontal scrolling (#4117) (#4119)
(cherry picked from commit a2643b34bf24daa59a0007110e599a6bc61febda)

--- a/InvenTree/InvenTree/static/css/inventree.css
+++ b/InvenTree/InvenTree/static/css/inventree.css
@@ -18,7 +18,7 @@
 }
 
 main {
-    overflow-x: clip;
+    overflow-x: auto;
 }
 
 .login-screen {
